--- a/offset_print/src/translations/mk/global.json
+++ b/offset_print/src/translations/mk/global.json
@@ -6,6 +6,31 @@
     "contact": "Контакт"
   },
   "home": {
-    "body": "печатница"
+    "welcomeHeading": "Welcome to Offset Print",
+    "welcomeParagraph": "Во Offset Print, ги оживуваме вашите идеи со прецизност, квалитет и ефикасност. Како водечка фабрика за офсет печатење, ние сме специјализирани за испорака на висококвалитетни продукти што ги задоволат вашите единствени потреби."
+  },
+  "contact": {
+    "getInTouch": "Контактирајте не",
+    "businessHours": "Работно време",
+    "weekDays": {
+      "monday": "Понеделник",
+      "tuesday": "Вторник",
+      "wednesday": "Среда",
+      "thursday": "Четврток",
+      "friday": "Петок",
+      "saturday": "Сабота",
+      "sunday": "Недела"
+    },
+    "name": "Име",
+    "email": "Е-пошта",
+    "message": "Порака",
+    "send": "Испрати",
+    "phone": "Телефон",
+    "fax": "Факс",
+    "address": "Адреса: Рудничка бб. Кичево 6250 РСМ",
+    "closed": "Затворено",
+    "emailSent": "Е-поштата е успешно испратена"
   }
+
+
 }
