--- a/offset_print/src/translations/en/global.json
+++ b/offset_print/src/translations/en/global.json
@@ -10,7 +10,38 @@
     "welcomeParagraph": "At Offset Print, we bring your ideas to life with precision, quality, and efficiency. As a leading offset printing factory, we specialize in delivering high-quality print solutions tailored to meet your unique needs."
   },
   "products": {
-
+    "products": "Products",
+    "books": "Books",
+    "customNotebooks": "Custom Notebooks",
+    "businessCards": "Business Cards",
+    "ncrPads": "NCR Pads",
+    "promotionalFlyers": "Promotional Flyers",
+    "brochures": "Brochures",
+    "menus": "Menus",
+    "customCalendars": "Custom Calendars",
+    "eventTickets": "Event Tickets",
+    "hotFoilPrint": "Hot Foil Print",
+    "banners": "Banners",
+    "stationery": "Stationery",
+    "tshirts": "T-Shirts",
+    "pens": "Pens",
+    "lighters": "Lighters",
+    "muchMore": "and much more...",
+    "bookDescription": "Professionally printed books with crisp text and vibrant images. Available in various sizes and binding options, ideal for authors, publishers, and businesses.",
+    "notebookDescription": "Our Customizable Notebooks are ideal for capturing ideas, taking notes, and planning projects. Personalise your unique and functional promotional item!",
+    "businessCardDescription": "Elevate your professional presence with Premium Business Cards. Perfect for networking events, client meetings, and everyday business interactions.",
+    "ncrPadsDescription": "Customizable NCR Pads for creating instant duplicates of invoices, receipts, and order forms. Perfect for efficient business operations.",
+    "promotionalFlyersDescription": "Promotional Flyers as an effective marketing tool, with customizable templates to meet your needs.",
+    "brochuresDescription": "Deliver your message with clarity and style using our Professional Brochures. Ideal for marketing campaigns, product information, and corporate profiles.",
+    "menusDescription": "High-quality, customizable menus for restaurants, cafes, and bars. Available in various formats and finishes.",
+    "customCalendarsDescription": "Keep your brand in front of clients all year long with a Personalized Calendar. Available in wall, desk, and pocket formats.",
+    "eventTicketsDescription": "Durable and customizable event tickets with security features. Ideal for concerts, festivals, and shows.",
+    "hotFoilPrintDescription": "Special type of printing for creating impressive wedding invitations, tickets, and other special items.",
+    "bannersDescription": "Weather-resistant banners for indoor and outdoor use. Custom sizes and high-resolution printing.",
+    "stationeryDescription": "Elegant stationery sets including letterheads, envelopes, and notepads. Perfect for corporate branding.",
+    "tshirtsDescription": "Comfortable and stylish custom T-shirts. Perfect for promotional events, team uniforms, and everyday wear.",
+    "pensDescription": "High-quality, customizable pens for everyday use. Ideal for branding, promotions, and corporate gifts.",
+    "lightersDescription": "Reliable and customizable lighters. Ideal for promotional giveaways and everyday use."
   },
   "contact": {
     "getInTouch": "Get in touch",
