--- a/offset_print/src/translations/mk/global.json
+++ b/offset_print/src/translations/mk/global.json
@@ -9,6 +9,41 @@
     "welcomeHeading": "Welcome to Offset Print",
     "welcomeParagraph": "Во Offset Print, ги оживуваме вашите идеи со прецизност, квалитет и ефикасност. Како водечка фабрика за офсет печатење, ние сме специјализирани за испорака на висококвалитетни продукти што ги задоволат вашите единствени потреби."
   },
+  "products": {
+    "products": "Производи",
+    "books": "Книги",
+    "customNotebooks": "Персонализирани Тетратки",
+    "businessCards": "Визит Картички",
+    "ncrPads": "NCR Блокови",
+    "promotionalFlyers": "Промотивни Флаери",
+    "brochures": "Брошури",
+    "menus": "Менија",
+    "customCalendars": "Персонализирани Календари",
+    "eventTickets": "Билети за Настани",
+    "hotFoilPrint": "Печатење со Топла Фолија",
+    "banners": "Банери",
+    "stationery": "Канцелариски Материјали",
+    "tshirts": "Маици",
+    "pens": "Пенкала",
+    "lighters": "Запалки",
+    "muchMore": "и многу повеќе...",
+    "bookDescription": "Професионално печатени книги со јасен текст и живописни слики. Достапни во различни големини и опции за врзување, идеални за автори, издавачи и бизниси.",
+    "notebookDescription": "Нашите прилагодливи тетратки се идеални за фаќање идеи, водење белешки и планирање проекти. Персонализирајте го вашиот уникатен и функционален промотивен производ!",
+    "businessCardDescription": "Подобрете го вашиот професионален изглед со премиум визит-картички. Совршени за настани за вмрежување, средби со клиенти и секојдневни деловни интеракции.",
+    "ncrPadsDescription": "Прилагодливи NCR блокови за создавање на инстантни дупликати на фактури, сметки и нарачки. Совршени за ефикасно работење на бизнисот.",
+    "promotionalFlyersDescription": "Промотивни летоци како ефикасна алатка за маркетинг, со прилагодливи шаблони за да ги исполнат вашите потреби.",
+    "brochuresDescription": "Испратете ја вашата порака со јасност и стил користејќи ги нашите професионални брошури. Идеални за маркетинг кампањи, информации за производи и корпоративни профили.",
+    "menusDescription": "Менуа со висок квалитет, прилагодливи за ресторани, кафулиња и барови. Достапни во различни формати и завршни обработки.",
+    "customCalendarsDescription": "Чувајте ја вашата марка пред клиентите во текот на целата година со персонализиран календар. Достапни во ѕидни, биро и џебни формати.",
+    "eventTicketsDescription": "Издржливи и прилагодливи билети за настани со безбедносни карактеристики. Идеални за концерти, фестивали и настапи.",
+    "hotFoilPrintDescription": "Специјален тип на печатење за создавање на впечатливи покани за свадби, билети и други посебни предмети.",
+    "bannersDescription": "Банери отпорни на временски услови за внатрешна и надворешна употреба. Прилагодливи големини и печатење со висока резолуција.",
+    "stationeryDescription": "Елегантни комплети канцелариски материјали, вклучувајќи писма, пликови и блокчиња. Совршени за корпоративно брендирање.",
+    "tshirtsDescription": "Удобни и стилски прилагодливи маици. Совршени за промотивни настани, тимски униформи и секојдневно носење.",
+    "pensDescription": "Квалитетни прилагодливи пенкала за секојдневна употреба. Идеални за брендирање, промоции и корпоративни подароци.",
+    "lightersDescription": "Сигурни и прилагодливи запалки. Идеални за промотивни подароци и секојдневна употреба."
+
+  },
   "contact": {
     "getInTouch": "Контактирајте не",
     "businessHours": "Работно време",
