--- a/offset_print/src/translations/sq/global.json
+++ b/offset_print/src/translations/sq/global.json
@@ -9,6 +9,41 @@
     "welcomeHeading": "Mirë se vini në Offset Print",
     "welcomeParagraph": "Në Offset Print, ne i realizojmë idetë tuaja me saktësi, cilësi dhe efikasitet. Si një fabrikë lider për printime, ne jemi të specializuar në ofrimin e produkteve tona me cilësi të lartë të përshtatura për nevojat tuaja unike."
   },
+  "products": {
+      "products": "Produktet",
+      "books": "Libra",
+      "customNotebooks": "Fletore të Personalizuara",
+      "businessCards": "Kartëvizita",
+      "ncrPads": "Notesa NCR",
+      "promotionalFlyers": "Flyers",
+      "brochures": "Broshura",
+      "menus": "Menu",
+      "customCalendars": "Kalendarë të Personalizuar",
+      "eventTickets": "Bileta për Evente",
+      "hotFoilPrint": "Shtyp Hot Foil",
+      "banners": "Banera",
+      "stationery": "Materiale Zyrtare",
+      "tshirts": "Bluza",
+      "pens": "Stilolapsa",
+      "lighters": "Çakmakë",
+      "muchMore": "dhe shumë artikuj të tjerë...",
+    "bookDescription": "Libra të shtypur profesionalisht me tekst të qartë dhe imazhe të gjalla. Të disponueshme në madhësi dhe mundësi të ndryshme lidhjeje, ideale për autorët, botuesit dhe bizneset.",
+    "notebookDescription": "Fletoret tona të personalizueshme janë ideale për të kapur ide, për të marrë shënime dhe për të planifikuar projekte. Personalizoni artikullin tuaj promovues unik dhe funksional!",
+    "businessCardDescription": "Rritni prezencën tuaj profesionale me Kartat e Biznesit Premium. Të përshtatshme për evente rrjetëzimi, takime me klientë dhe ndërveprime të përditshme biznesi.",
+    "ncrPadsDescription": "Pads të personalizueshme NCR për të krijuar kopje të menjëhershme të faturave, faturave dhe formularëve të porosisë. Perfekte për funksionimin efikas të biznesit.",
+    "promotionalFlyersDescription": "Flyers promovuese si një mjet efektiv marketingu, me modele të personalizueshme për të përmbushur nevojat tuaja.",
+    "brochuresDescription": "Dërgoni mesazhin tuaj me qartësi dhe stil duke përdorur Broshurat tona Profesionale. Ideale për fushata marketingu, informacion mbi produktet dhe profilet e korporatave.",
+    "menusDescription": "Menu të cilësisë së lartë, të personalizueshme për restorante, kafene dhe bare. Të disponueshme në formate dhe përfundime të ndryshme.",
+    "customCalendarsDescription": "Mbani markën tuaj përpara klientëve gjatë gjithë vitit me një Kalendar të Personalizuar. Të disponueshme në formate muri, tavoline dhe xhepi.",
+    "eventTicketsDescription": "Bileta për evente të qëndrueshme dhe të personalizueshme me veçori sigurie. Ideale për koncerte, festivale dhe shfaqje.",
+    "hotFoilPrintDescription": "Lloj i veçantë shtypi për krijimin e ftesave për dasma, biletave dhe artikujve të tjerë të veçantë mbresëlënës.",
+    "bannersDescription": "Banera të qëndrueshme ndaj motit për përdorim të brendshëm dhe të jashtëm. Madhësi të personalizuara dhe shtypje me rezolucion të lartë.",
+    "stationeryDescription": "Sete elegante me letrën tuaj, zarfe dhe bllok shënimesh. Perfekte për markimin e korporatave.",
+    "tshirtsDescription": "Bluza të personalizuara të rehatshme dhe stil. Perfekte për evente promovuese, uniforma të ekipeve dhe veshje të përditshme.",
+    "pensDescription": "Stilolapsa të cilësisë së lartë, të personalizueshme për përdorim të përditshëm. Ideale për markimin, promovimet dhe dhuratat e korporatave.",
+    "lightersDescription": "Çakmakë të besueshme dhe të personalizueshme. Ideale për dhurata promovuese dhe përdorim të përditshëm."
+
+  },
   "contact": {
     "getInTouch": "Kontaktoni",
     "businessHours": "Orari i punës",
