--- a/offset_print/src/translations/mk/global.json
+++ b/offset_print/src/translations/mk/global.json
@@ -44,6 +44,17 @@
     "lightersDescription": "Сигурни и прилагодливи запалки. Идеални за промотивни подароци и секојдневна употреба."
 
   },
+  "about_us": {
+    "aboutUs": "За Нас",
+    "ceo": "Извршен директор",
+    "ourMission": "Нашата Мисија",
+    "whatWeDo": "Што Правиме",
+    "ourStory": "Нашата Приказна",
+    "ceoTextContent": "Основач и Генерален директор на Offset Print, е професионалец во управување со машини за печатење. Неговото искуство и посветеност беа клучни фактори во воспоставувањето на Offset Print како лидер во индустријата.",
+    "ourMissionTextContent": "Нашата мисија е постојано да доставуваме висококалибарни печатни решенија кои ги надминуваат очекувањата на клиентите преку посветеност на прецизност и иновација, обезбедувајќи неспоредлив квалитет и задоволство.",
+    "whatWeDoTextContent": "Ние сме специјализирани во офсет печатење, нудејќи широк спектар на производи вклучувајќи книги, весници, списанија, тетратки, визит-карти и многу повеќе.",
+    "ourStoryTextContent": "Основана во 2007 година, нашата печатница започна со љубов кон офсет печатењето. Со текот на годините, ние растевме и ги проширивме нашите услуги за да ги задоволиме различните потреби на нашите клиенти."
+  },
   "contact": {
     "getInTouch": "Контактирајте не",
     "businessHours": "Работно време",
