--- a/offset_print/src/translations/en/global.json
+++ b/offset_print/src/translations/en/global.json
@@ -72,7 +72,7 @@
     "send": "Send",
     "phone": "Phone",
     "fax": "Fax",
-    "address": "Address: Rudnicka bb. Kicevo 6250 North Macedonia",
+    "address": "Rudnicka nn. Kicevo 6250 N.Macedonia",
     "closed": "Closed",
     "emailSent": "Email sent successfully"
   }
