--- a/offset_print/src/translations/mk/global.json
+++ b/offset_print/src/translations/mk/global.json
@@ -73,7 +73,7 @@
     "send": "Испрати",
     "phone": "Телефон",
     "fax": "Факс",
-    "address": "Адреса: Рудничка бб. Кичево 6250 РСМ",
+    "address": "Рудничка бб. Кичево 6250 РСМ",
     "closed": "Затворено",
     "emailSent": "Е-поштата е успешно испратена"
   }
