--- a/offset_print/src/translations/sq/global.json
+++ b/offset_print/src/translations/sq/global.json
@@ -73,7 +73,7 @@
     "send": "Dërgo",
     "phone": "Telefoni",
     "fax": "Faksi",
-    "address": "Adresa: Rudnicka nn. Kërçovë 6250 RMV",
+    "address": "Rudnicka nn. Kërçovë 6250 RMV",
     "closed": "Mbyllur",
     "emailSent": "Emaili u dërgua me sukses"
   }
