fix: responsiveness, ready

--- a/offset_print/src/translations/mk/global.json
+++ b/offset_print/src/translations/mk/global.json
@@ -6,7 +6,7 @@
     "contact": "Контакт"
   },
   "home": {
-    "welcomeHeading": "Welcome to Offset Print",
+    "welcomeHeading": "Добре дојдовте во Оффсет Принт",
     "welcomeParagraph": "Во Offset Print, ги оживуваме вашите идеи со прецизност, квалитет и ефикасност. Како водечка фабрика за офсет печатење, ние сме специјализирани за испорака на висококвалитетни продукти што ги задоволат вашите единствени потреби."
   },
   "products": {
